--- a/src/guides/main/running-a-validator-arbitrum-university-967.yaml
+++ b/src/guides/main/running-a-validator-arbitrum-university-967.yaml
@@ -1,12 +1,14 @@
 categories: []
 content: A comprehensive guide to run a Validator
-created: '2023-11-06T14:34:07.412Z'
+created: '2023-11-06T18:15:39.879Z'
 guideType: onboarding
 key: running-a-validator-arbitrum-university-967
 name: Running a Validator
 publishStatus: Live
 steps:
   - content: >-
+      ## What is a Validator?
+
       In the Arbitrum ecosystem, certain nodes opt to function as validators,
       playing a crucial role in monitoring and advancing the rollup protocol to
       ensure the chain's state progresses securely. These nodes validate the
