--- a/src/guides/main/running-a-validator-arbitrum-university-967.yaml
+++ b/src/guides/main/running-a-validator-arbitrum-university-967.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A comprehensive guide to run a Validator
-created: '2023-11-06T18:42:38.874Z'
+created: '2023-11-06T18:45:45.576Z'
 guideType: onboarding
 key: running-a-validator-arbitrum-university-967
 name: Running a Validator
@@ -127,9 +127,6 @@ steps:
         explanation: Explanation of the question
     uuid: 792c3404-3c17-4f53-8951-a7e5e9a665ac
   - content: >-
-      ## Running a Watchtower validator
-
-
       ### Default Node Configuration
 
 
@@ -176,7 +173,7 @@ steps:
 
       - **Deactivation**: If desired, Watchtower mode can be turned off by using
       the configuration parameter `--node.staker.enable=false`.
-    name: Watchtower Validator
+    name: Run Watchtower Validator
     stepItems: []
     uuid: d5c43d16-0c09-42e2-8526-b494c7ffa349
   - content: ''
