update guide Introduction to Arbitrum

--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,12 +1,48 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-10-31T17:40:20.512Z'
+created: '2023-11-07T14:34:25.634Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
 publishStatus: Live
 steps:
   - content: >-
+      ##  Intro to Arbitrum
+
+      ### What is Arbitrum
+
+      ### What is Layer 2 
+
+      ### Benefits of Layer 2
+
+
+      ## Arbiturm - Optimistic Rollup
+
+      ### Types of Layer 2
+
+      ### Optimistic Rollup, how it works
+
+      ### How is arbiturm diferent from other Optimistic L2 Rollups
+
+
+      ## Arbitrum Chains
+
+      ### Nitro
+
+      ### NOVA
+
+      ### Orbit
+
+
+      ## Arbitrum Ecosystem
+
+      ### Stylus
+
+      ### Ecosystem Support
+
+      ### Decentralize governance
+
+
       ## What is Arbitrum?
 
 
