--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,280 +1,202 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-11-07T14:34:25.634Z'
+created: '2023-11-07T15:49:21.978Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
 publishStatus: Live
 steps:
   - content: >-
-      ##  Intro to Arbitrum
+      ## What is Arbitrum
 
-      ### What is Arbitrum
 
-      ### What is Layer 2 
+      Arbitrum is a Layer 2 scaling solution designed to enhance the Ethereum
+      blockchain's scalability and efficiency. It processes transactions
+      separately from Ethereum's main chain and utilizes Rollup technology to
+      combine multiple transactions into one, increasing throughput and reducing
+      costs. Arbitrum maintains compatibility with Ethereum's existing tools and
+      smart contracts, allowing for straightforward application deployment.
+      Developed by Offchain Labs, it includes the Arbitrum One mainnet, which
+      supports smart contract execution with Ethereum network validation. The
+      use of Arbitrum significantly lowers transaction fees, making it a
+      cost-effective alternative for running decentralized applications and
+      smart contracts compared to Ethereum's mainnet.
+
+
+      ## What is Layer 2 
+
+
+      Layer 2 refers to a secondary framework or protocol that is built on top
+      of an existing blockchain system, known as Layer 1. The primary purpose of
+      Layer 2 solutions is to address the scalability and performance issues of
+      the main blockchain by handling transactions off the main chain. This
+      allows for faster processing times and reduced transaction costs, without
+      compromising the decentralized security model of the underlying
+      blockchain. Layer 2 solutions include various technologies such as state
+      channels, sidechains, and rollups, each with their own approach to
+      off-chain transaction handling and subsequently settling the final state
+      on-chain.
+
 
       ### Benefits of Layer 2
 
 
-      ## Arbiturm - Optimistic Rollup
+      **Increased Transaction Throughput** 
 
-      ### Types of Layer 2
-
-      ### Optimistic Rollup, how it works
-
-      ### How is arbiturm diferent from other Optimistic L2 Rollups
+      By handling transactions off the main chain, Layer 2 can process many more
+      transactions per second than the base layer, alleviating congestion.
 
 
-      ## Arbitrum Chains
+      **Reduced Costs**
 
-      ### Nitro
-
-      ### NOVA
-
-      ### Orbit
+      Transactions on Layer 2 typically incur lower fees because they minimize
+      the demand on the network's main chain resources.
 
 
-      ## Arbitrum Ecosystem
+      **Improved Speed** 
 
-      ### Stylus
-
-      ### Ecosystem Support
-
-      ### Decentralize governance
+      Transactions can be completed faster on Layer 2, as they are not subject
+      to the longer processing times of the main chain.
 
 
-      ## What is Arbitrum?
+      **Enhanced Scalability**
+
+      Layer 2 can scale independently from the main chain, allowing the network
+      to support more users and applications without a proportional increase in
+      transaction costs or times.
 
 
-      Arbitrum is a layer-2 solution for the Ethereum blockchain that aims to
-      address the issues of congestion, high fees, and slow transaction speeds.
-      Developed by Offchain Labs, Arbitrum allows developers to build
-      decentralized applications (dApps) on a separate layer, reducing the
-      strain on the Ethereum network. Arbitrum One is a layer-2 mainnet that
-      enables the execution of smart contracts, which are later validated by the
-      Ethereum network. The fees for using Arbitrum are paid in ETH, and the
-      development team expects a significant reduction in transaction fees
-      compared to the Ethereum mainnet. This means that running smart contracts
-      on Arbitrum is more cost-effective than running them directly on the ETH
-      mainnet.
+      **Maintained Security**
 
-
-      #### Transaction Rollups
-
-
-      The platform utilizes a technique called 'transaction rollups' to improve
-      scalability. This involves batching transactions and records on a lower
-      layer before moving them to the Ethereum mainnet. By doing so, Arbitrum
-      can leverage the security of the Ethereum network while significantly
-      reducing congestion. 
-
-
-      ## Why do we need it?
-
-
-      One of the key benefits of Arbitrum is its ability to improve the
-      efficiency and cost-effectiveness of Ethereum smart contracts.
-      Transactions are executed off-chain and then bundled together before being
-      submitted to the Ethereum mainnet. This offloads the computational and
-      storage burden from the mainnet, resulting in lower costs for end-users.
-
-
-      Arbitrum also introduces additional privacy features to enhance the user
-      experience. Transactions are assumed to be valid, and there is a challenge
-      period for anyone to dispute a transaction by posting a fraud proof. This
-      ensures the integrity of the network while maintaining transaction
-      privacy.
-    name: What is Arbitrum?
+      Despite processing transactions off-chain, Layer 2 solutions typically
+      inherit the strong security guarantees of the underlying main chain.
+    name: Introduction to Arbitrum
     stepItems: []
     uuid: 1177dd85-a206-4d4e-99fb-46549ce30bd0
   - content: ''
     name: Evaluation
     stepItems: []
     uuid: 454ca522-ba97-4e1b-b09e-2b334ba36a5b
-  - content: >-
+  - content: >
+      ## Roll Ups
 
-      ## Optimistic Model
-
-
-      The platform operates on an optimistic model, where any validator can post
-      a rollup block and verify the validity of other blocks. The term "rollup"
-      refers to the reconstruction of a complete chain history from an optimized
-      log of events using public information. This model ensures the network's
-      resilience against collusion and other forms of attack, as long as at
-      least one validator remains honest.
-
-
-      ## Arbitrum Nodes
-       
-      Arbitrum employs different types of nodes to support its operations.
-      Validator nodes observe the state of the chain, while full nodes aggregate
-      layer 1 transactions. Aggregators, who submit transactions to the layer 1
-      chain, earn rewards in ETH, and the remaining user transaction fees are
-      distributed to other network participants, such as validators.
+      Rollups are a type of Layer 2 scaling solution that execute transactions
+      outside the main Ethereum chain (off-chain) but record transaction data on
+      the main chain (on-chain). The core idea is to "roll up" or batch many
+      transactions into a single one, which is then posted to the main chain.
+      This reduces the amount of data that needs to be stored and processed on
+      the main chain, significantly increasing throughput and reducing
+      transaction fees.
 
 
-      ####  Arbitrum's Challenge Mechanism 
+      ### Types of Roll ups
+
+      There are two main types of rollups, each with its own approach to
+      validating the batched transactions:
 
 
-      To maintain the integrity of the system, Arbitrum introduces a challenge
-      step for rollup blocks. Validators check the correctness of a block and
-      issue a challenge if they suspect any wrongdoing. If a block is proven to
-      be incorrect or a challenge is unjustified, the lying validator will have
-      their stake confiscated, ensuring fair play and deterring fraudulent
-      behavior.
+      **Optimistic Rollups**
+
+      These operate on the principle that all transactions are assumed to be
+      valid by default. They only execute transaction computations on-chain in
+      the event of a challenge. This means that instead of performing
+      computation to prove the correctness of transactions upfront, Optimistic
+      Rollups post the transactions along with a bond. After a challenge period,
+      if no one disputes the transaction batch with a "fraud proof" showing that
+      something was wrong, the transactions are considered valid. This method
+      allows for significant scaling benefits, but the challenge period can
+      introduce a delay in finalizing transactions.
 
 
-      ####  Arbitrum Virtual Machine (AVM)
+      **Zero-Knowledge Rollups (ZK-Rollups)**
+
+      ZK-Rollups bundle transactions and generate a cryptographic proof, known
+      as a zero-knowledge proof (specifically, a zk-SNARK or zk-STARK),
+      attesting to their validity. This proof is then posted to the main chain,
+      where it can be quickly verified. Because the validity of the entire batch
+      can be confirmed without executing the transactions individually,
+      ZK-Rollups can finalize transactions much more quickly than Optimistic
+      Rollups. Additionally, ZK-Rollups enhance privacy since the actual
+      transaction data can be kept off-chain.
 
 
-      Arbitrum also features its own custom virtual machine called the Arbitrum
-      Virtual Machine (AVM). This virtual machine serves as the execution
-      environment for Arbitrum smart contracts and operates above the EthBridge,
-      a set of smart contracts that interfaces with the Arbitrum chain.
-      Ethereum-compatible smart contracts are automatically translated to run on
-      the AVM.
+      ## Optimistic Rollup; How it works?
+
+      Optimistic Rollups operates on the assumption that all transactions are
+      honest and valid unless proven otherwise. Here's how they work:
 
 
-      ####  Optimistic Rollups
+      **Transaction Batching**
+
+      Transactions are executed and processed by a smart contract on a separate
+      Layer 2 chain. Rather than each transaction being individually recorded on
+      the main Ethereum blockchain (Layer 1), they are collected into batches.
 
 
-      In terms of scalability, Arbitrum utilizes blockchain rollups, a 2-layer
-      architecture that processes transactions off-chain before settling them
-      on-chain. This approach eliminates the need for the blockchain to validate
-      individual transactions and instead confirms batches of transactions in a
-      "rolled up" form. Unlike other Layer 2 solutions like sidechains,
-      Arbitrum's rollups derive their security from the Ethereum mainnet.
-      Arbitrum's rollups specifically employ optimistic rollups, which optimize
-      transaction processing by using compression techniques. These techniques
-      reduce gas fees and optimize block space by storing only necessary data on
-      the Ethereum blockchain. As a result, optimistic rollups enable the main
-      chain to handle more transactions while requiring less space. However, due
-      to the complex fraud detection process, withdrawals from the chain may
-      take up to a week to process.
-    name: How does it work?
+      **Posting to Layer 1**
+
+      Once a batch of transactions is processed, the new state is posted to the
+      main chain along with a "state root" — a cryptographic hash that
+      represents the cumulative state of all accounts after these transactions.
+
+
+      **Optimistic Assumption**
+
+      The term "optimistic" comes from the system's trust that transactions are
+      valid. No computation or proof of validity is performed at the time of
+      posting the batch, which saves on gas fees and time.
+
+
+      **Challenge Period**
+
+      The transactions are not immediately finalized on the main chain. Instead,
+      they enter a challenge period during which they can be disputed. If anyone
+      believes that a transaction in the batch is fraudulent, they can submit a
+      "fraud proof."
+
+
+      **Fraud Proofs**
+
+      If a fraud proof is submitted, the Optimistic Rollup protocol will run the
+      disputed transaction's computation on the main chain to determine its
+      validity. If the transaction is indeed invalid, the batch is rolled back,
+      and the party who posted the fraudulent batch may lose their bond or
+      collateral.
+
+
+      **Finalization**
+
+      If the challenge period passes without disputes, or if disputes are
+      resolved in favor of the batch's validity, the transactions are considered
+      finalized. This period can vary in length but is necessary to ensure the
+      security of the system without performing full computation on the main
+      chain.
+    name: Arbiturm - Optimistic Rollup
     stepItems: []
     uuid: 9e3b90a5-66a9-406e-baa7-b24726e5ab83
   - content: ''
     name: Evaluation
     stepItems: []
     uuid: 3cc2ab75-c65d-4157-b7d9-c475e3d481f0
-  - content: >-
-      the competition among layer 2 solutions in the Ethereum ecosystem is
-      fierce. While Arbitrum and Optimism are currently leading the pack, other
-      options like zkSync are quickly catching up. Each solution has its own
-      unique features and trade-offs, and the race to build the best scaling
-      solution for Ethereum continues.
-
-
-      ## Arbitrum vs Optimism
-
-
-      When it comes to layer 2 solutions for Ethereum, there are several options
-      to choose from. One popular choice is Arbitrum, which falls into the
-      category of rollup-based layer 2s. It currently has the highest total
-      value locked (TVL) and offers a well-established ecosystem of
-      decentralized applications (dApps) and smart contracts.
-
-
-      Another contender in the layer 2 landscape is Optimism, which is a close
-      second to Arbitrum in terms of TVL. Optimism rollup platforms dominate the
-      scene, with over 117 protocols active on the chain. However, they may face
-      tough competition from other solutions like Polygon Hermez, Loopring,
-      StarkWare, and zkSync.
-
-
-      Arbitrum stands out with its own Virtual Machine, which enables a more
-      established ecosystem of dApps and complex smart contracts. It ensures the
-      validity of cryptocurrency transactions without relying on optimistic
-      assumptions. On the other hand, Optimism relies partly on Ethereum's
-      Virtual Machine and uses a single "fraud proof," which can be faster but
-      potentially easier to fake.
-
-
-      ## Arbitrum vs Other Layer 2s
-
-
-      One key difference between these solutions is the approach they take.
-      Optimism rollups include a challenge window, allowing transactions to be
-      disputed, while zk-rollups use computational methods to prove transaction
-      validity without requiring good faith. This makes zk-rollups more
-      efficient, as they only need to post a small amount of information back to
-      the main Ethereum chain.
-
-
-      However, some argue that zk-rollups may not be able to match the
-      scalability of optimistic rollups due to the computational work involved
-      in generating cryptographic validity proofs. Nonetheless, both solutions
-      aim to reduce transaction fees and times on the Ethereum network.
-    name: Arbitrum vs Other Layer 2s
+  - content: |-
+      ## Arbitrum Chains
+      ### Nitro
+      ### NOVA
+      ### Orbit
+      ### How is arbiturm diferent from other Optimistic L2 Rollups
+    name: Arbitrum Chains
     stepItems: []
     uuid: 6aae4c48-10e0-494b-bd9e-a8404f42515d
   - content: ''
     name: Evaluation
     stepItems: []
     uuid: 35076c67-6a2a-4dfe-bfb4-c5b9565ed0f4
-  - content: >-
-      ## Key Benefits of Arbitrum
-
-
-      Arbitrum offers several benefits that make it a promising solution for the
-      limitations of the Ethereum network. 
-
-
-      ####  Compatible with EVM 
-
-
-      One of the standout features of Arbitrum is its compatibility with the
-      Ethereum Virtual Machine (EVM). This means that developers can build their
-      decentralized applications (dApps) within the Arbitrum mainnet without
-      having to learn a new coding language. Unlike other networks like Polkadot
-      and Cardano, Arbitrum operates as a separate layer of the network,
-      relieving the Ethereum mainnet from excessive transactions. It achieves
-      this by introducing optimistic Arbitrum rollups, which facilitate the
-      validation of smart contracts. 
-
-
-      ####  Greater Speed and Scalibility 
-
-
-      While Ethereum's switch to a proof-of-stake (PoS) consensus mechanism was
-      expected to improve transaction speeds and scalability, it did not address
-      the issue of high gas fees. In contrast, Arbitrum One has reduced fees by
-      allowing smart contracts to be validated in batches. This not only
-      benefits developers but also provides compensation to validators for their
-      efforts. Additionally, Arbitrum offers an easy-to-use platform for
-      developers to launch highly efficient and scalable Ethereum-compatible
-      smart contracts. It is compatible with the EVM at the bytecode level,
-      allowing developers to use familiar languages like Solidity and Vyper.
-
-
-      ####  Robust Developer Tooling 
-
-
-      Arbitrum aims to minimize barriers to entry for developers by providing
-      comprehensive documentation and allowing them to use existing tooling for
-      Ethereum. Developers do not need to download any specific plugins or
-      compilers, making it convenient to build on Arbitrum. As a layer 2 scaling
-      solution, Arbitrum not only boosts Ethereum's transactional throughput but
-      also minimizes transaction fees. Its efficient rollup technology
-      significantly reduces fees compared to Ethereum while still providing
-      sufficient incentives for validators.
-
-
-      ####  Developer-Focused Approach
-
-
-      Arbitrum has already conducted several testnets and is currently live on
-      the mainnet for developers. Unlike other layer 2 scaling solutions,
-      Arbitrum does not have its own native utility token and did not have a
-      token sale. The team behind Arbitrum is committed to giving developers
-      ample time to get up and running before opening it to the masses. They
-      have pledged to provide at least two full weeks of development time for
-      all the development teams that applied to build on the developer mainnet.
-      Arbitrum has already gained traction and is working with various Ethereum
-      dApps and infrastructure projects, including popular platforms like
-      Uniswap, DODO, and Sushi.
-    name: Benefits of Arbitrum
+  - content: |-
+      ## Arbitrum Ecosystem
+      ### Stylus
+      ### Ecosystem Support
+      ### Decentralize governance
+    name: Arbitrum Ecosystem
     stepItems: []
     uuid: 44ce8c60-de16-42f2-abb6-a12bcbb75d00
   - content: ''
