--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-11-07T15:49:21.978Z'
+created: '2023-11-07T15:53:00.991Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
@@ -41,32 +41,32 @@ steps:
       ### Benefits of Layer 2
 
 
-      **Increased Transaction Throughput** 
+      #### Increased Transaction Throughput
 
       By handling transactions off the main chain, Layer 2 can process many more
       transactions per second than the base layer, alleviating congestion.
 
 
-      **Reduced Costs**
+      #### Reduced Costs
 
       Transactions on Layer 2 typically incur lower fees because they minimize
       the demand on the network's main chain resources.
 
 
-      **Improved Speed** 
+      #### Improved Speed
 
       Transactions can be completed faster on Layer 2, as they are not subject
       to the longer processing times of the main chain.
 
 
-      **Enhanced Scalability**
+      #### Enhanced Scalability
 
       Layer 2 can scale independently from the main chain, allowing the network
       to support more users and applications without a proportional increase in
       transaction costs or times.
 
 
-      **Maintained Security**
+      #### Maintained Security
 
       Despite processing transactions off-chain, Layer 2 solutions typically
       inherit the strong security guarantees of the underlying main chain.
@@ -95,7 +95,7 @@ steps:
       validating the batched transactions:
 
 
-      **Optimistic Rollups**
+      #### Optimistic Rollups
 
       These operate on the principle that all transactions are assumed to be
       valid by default. They only execute transaction computations on-chain in
@@ -108,7 +108,7 @@ steps:
       introduce a delay in finalizing transactions.
 
 
-      **Zero-Knowledge Rollups (ZK-Rollups)**
+      #### Zero-Knowledge Rollups (ZK-Rollups)
 
       ZK-Rollups bundle transactions and generate a cryptographic proof, known
       as a zero-knowledge proof (specifically, a zk-SNARK or zk-STARK),
@@ -126,28 +126,28 @@ steps:
       honest and valid unless proven otherwise. Here's how they work:
 
 
-      **Transaction Batching**
+      #### Transaction Batching
 
       Transactions are executed and processed by a smart contract on a separate
       Layer 2 chain. Rather than each transaction being individually recorded on
       the main Ethereum blockchain (Layer 1), they are collected into batches.
 
 
-      **Posting to Layer 1**
+      #### Posting to Layer 1
 
       Once a batch of transactions is processed, the new state is posted to the
       main chain along with a "state root" — a cryptographic hash that
       represents the cumulative state of all accounts after these transactions.
 
 
-      **Optimistic Assumption**
+      #### Optimistic Assumption
 
       The term "optimistic" comes from the system's trust that transactions are
       valid. No computation or proof of validity is performed at the time of
       posting the batch, which saves on gas fees and time.
 
 
-      **Challenge Period**
+      #### Challenge Period
 
       The transactions are not immediately finalized on the main chain. Instead,
       they enter a challenge period during which they can be disputed. If anyone
@@ -155,7 +155,7 @@ steps:
       "fraud proof."
 
 
-      **Fraud Proofs**
+      #### Fraud Proofs
 
       If a fraud proof is submitted, the Optimistic Rollup protocol will run the
       disputed transaction's computation on the main chain to determine its
@@ -164,7 +164,7 @@ steps:
       collateral.
 
 
-      **Finalization**
+      #### Finalization
 
       If the challenge period passes without disputes, or if disputes are
       resolved in favor of the batch's validity, the transactions are considered
