update guide Arbitrum vs Ethereum

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -11,3 +11,4 @@ guides:
   - useful-tools-arbitrum-university-260.yaml
   - running-a-validator-arbitrum-university-967.yaml
   - arbitrum-tools-arbitrum-university-530.yaml
+  - arbitrum-vs-ethereum-arbitrum-university-172.yaml
