--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-11-07T18:16:02.254Z'
+created: '2023-11-07T18:30:52.213Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
@@ -41,32 +41,32 @@ steps:
       ## Benefits of Layer 2
 
 
-      ### 1. Increased Transaction Throughput
+      #### 1. Increased Transaction Throughput
 
       By handling transactions off the main chain, Layer 2 can process many more
       transactions per second than the base layer, alleviating congestion.
 
 
-      ### 2. Reduced Costs
+      #### 2. Reduced Costs
 
       Transactions on Layer 2 typically incur lower fees because they minimize
       the demand on the network's main chain resources.
 
 
-      ### 3. Improved Speed
+      #### 3. Improved Speed
 
       Transactions can be completed faster on Layer 2, as they are not subject
       to the longer processing times of the main chain.
 
 
-      ### 4. Enhanced Scalability
+      #### 4. Enhanced Scalability
 
       Layer 2 can scale independently from the main chain, allowing the network
       to support more users and applications without a proportional increase in
       transaction costs or times.
 
 
-      ### 5. Maintained Security
+      #### 5. Maintained Security
 
       Despite processing transactions off-chain, Layer 2 solutions typically
       inherit the strong security guarantees of the underlying main chain.
@@ -126,51 +126,33 @@ steps:
       honest and valid unless proven otherwise. Here's how they work:
 
 
-      #### Transaction Batching
+      #### Step 1: Execution and Aggregation
 
-      Transactions are executed and processed by a smart contract on a separate
-      Layer 2 chain. Rather than each transaction being individually recorded on
-      the main Ethereum blockchain (Layer 1), they are collected into batches.
-
-
-      #### Posting to Layer 1
-
-      Once a batch of transactions is processed, the new state is posted to the
-      main chain along with a "state root" — a cryptographic hash that
-      represents the cumulative state of all accounts after these transactions.
-
-
-      #### Optimistic Assumption
-
-      The term "optimistic" comes from the system's trust that transactions are
-      valid. No computation or proof of validity is performed at the time of
-      posting the batch, which saves on gas fees and time.
+      In optimistic rollups, operators, or validators, process transactions by
+      aggregating and compressing them before submitting them to Ethereum's
+      blockchain. Any user can act as a validator by providing a bond, similar
+      to proof-of-stake systems, and risks penalties for any invalid
+      submissions. Validators also maintain their version of the rollup's state
+      and can issue fraud proofs if discrepancies arise. Some rollups use a
+      'sequencer' instead of multiple validators, which centralizes transaction
+      processing and submission but provides greater control over transaction
+      order and immediate access to the rollup chain.
 
 
-      #### Challenge Period
+      #### Step 2: Sending Roll up Blocks to Ethereum
 
-      The transactions are not immediately finalized on the main chain. Instead,
-      they enter a challenge period during which they can be disputed. If anyone
-      believes that a transaction in the batch is fraudulent, they can submit a
-      "fraud proof."
-
-
-      #### Fraud Proofs
-
-      If a fraud proof is submitted, the Optimistic Rollup protocol will run the
-      disputed transaction's computation on the main chain to determine its
-      validity. If the transaction is indeed invalid, the batch is rolled back,
-      and the party who posted the fraudulent batch may lose their bond or
-      collateral.
+      operators consolidate multiple off-chain transactions into a single batch
+      and compress the transaction data to minimize storage costs on Ethereum.
+      This batch is then submitted to Ethereum as 'calldata' — a temporary and
+      immutable form of data used by smart contracts to execute functions. While
+      'calldata' remains in the blockchain's history, it does not become part of
+      the Ethereum state, thereby conserving space and reducing costs. The
+      'calldata' keyword in Solidity is instrumental in calling smart contract
+      functions and organizing inputs, playing a critical role in the efficient
+      operation of optimistic rollups. 
 
 
-      #### Finalization
-
-      If the challenge period passes without disputes, or if disputes are
-      resolved in favor of the batch's validity, the transactions are considered
-      finalized. This period can vary in length but is necessary to ensure the
-      security of the system without performing full computation on the main
-      chain.
+      #### Step 3:  
     name: Arbiturm - Optimistic Rollup
     stepItems: []
     uuid: 9e3b90a5-66a9-406e-baa7-b24726e5ab83
@@ -306,6 +288,13 @@ steps:
 
 
       - https://coinmarketcap.com/academy/article/what-is-arbitrum
+
+
+      -
+      https://medium.com/offchainlabs/optimistic-rollups-the-present-and-future-of-ethereum-scaling-60fb9067ae87
+
+
+      - https://ethereum.org/en/developers/docs/scaling/optimistic-rollups/
     name: References
     stepItems: []
     uuid: 49ebf9d8-c9ae-482f-a3d0-b5538f2d2ca8
