--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-11-07T18:36:45.203Z'
+created: '2023-11-07T18:42:17.435Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
@@ -41,35 +41,27 @@ steps:
       ## Benefits of Layer 2
 
 
-      #### 1. Increased Transaction Throughput
-
-      By handling transactions off the main chain, Layer 2 can process many more
-      transactions per second than the base layer, alleviating congestion.
-
-
-      #### 2. Reduced Costs
-
-      Transactions on Layer 2 typically incur lower fees because they minimize
-      the demand on the network's main chain resources.
+      1. **Increased Transaction:** Throughput By handling transactions off the
+      main chain, Layer 2 can process many more transactions per second than the
+      base layer, alleviating congestion.
 
 
-      #### 3. Improved Speed
-
-      Transactions can be completed faster on Layer 2, as they are not subject
-      to the longer processing times of the main chain.
+      2. **Reduced Costs:** Transactions on Layer 2 typically incur lower fees
+      because they minimize the demand on the network's main chain resources.
 
 
-      #### 4. Enhanced Scalability
-
-      Layer 2 can scale independently from the main chain, allowing the network
-      to support more users and applications without a proportional increase in
-      transaction costs or times.
+      3. **Improved Speed:** Transactions can be completed faster on Layer 2, as
+      they are not subject to the longer processing times of the main chain.
 
 
-      #### 5. Maintained Security
+      4. **Enhanced Scalability:** Layer 2 can scale independently from the main
+      chain, allowing the network to support more users and applications without
+      a proportional increase in transaction costs or times.
 
-      Despite processing transactions off-chain, Layer 2 solutions typically
-      inherit the strong security guarantees of the underlying main chain.
+
+      5. **Maintained Security:** Despite processing transactions off-chain,
+      Layer 2 solutions typically inherit the strong security guarantees of the
+      underlying main chain.
     name: Introduction to Arbitrum
     stepItems: []
     uuid: 1177dd85-a206-4d4e-99fb-46549ce30bd0
@@ -141,7 +133,7 @@ steps:
 
       #### Step 2: Sending Roll up Blocks to Ethereum
 
-      operators consolidate multiple off-chain transactions into a single batch
+      Operators consolidate multiple off-chain transactions into a single batch
       and compress the transaction data to minimize storage costs on Ethereum.
       This batch is then submitted to Ethereum as 'calldata' — a temporary and
       immutable form of data used by smart contracts to execute functions. While
@@ -152,7 +144,46 @@ steps:
       operation of optimistic rollups. 
 
 
-      #### Step 3:  
+      #### Step 3: State Commitments
+
+      State commitments play a crucial role in maintaining the integrity of the
+      system. The state is structured as a Merkle tree, also known as the state
+      tree, which contains all the information about the current state of the
+      rollup. Operators compute new state roots reflecting the latest state
+      changes and submit these roots to the rollup contract on Ethereum. By
+      committing to the old and new state roots when posting transaction
+      batches, and including the Merkle root for transactions, operators provide
+      a verifiable record of the rollup's state changes on the Layer 1
+      blockchain. This mechanism ensures that the state of the rollup can be
+      trusted and verified.
+
+
+      #### Step 4: Fraud Proof 
+
+      The essence of optimistic rollups lies in their fraud-proof mechanism.
+      They allow blocks to be published without immediate validity checks. If
+      discrepancies are suspected, users can challenge transitions within a set
+      timeframe. Challenges trigger fraud-proof calculations, where disputed
+      transactions are replayed on Ethereum's main network through a verifier
+      contract. If fraud is confirmed, the responsible validator is penalized.
+      To support this, rollups must make detailed state commitments and
+      transaction data public on-chain, which incurs gas fees. Multi-round
+      interactive proofs can enhance this process's efficiency by reducing the
+      data and computation required for each verification step.
+
+
+      #### Step 5: Multiround Interactive Proving
+
+      Multi-round interactive proving is a critical component of optimistic
+      rollups. It involves a dialogue between a challenger and the block's
+      producer (asserter/operator), overseen by a Layer 1 verifier contract. If
+      a block is challenged, the operator splits the disputed assertion for the
+      rollup block into two, with each part undergoing repeated division through
+      a bisection protocol until the specific point of contention is isolated.
+      The verifier contract then adjudicates the dispute and identifies any
+      fraudulent activity. This process ensures that only valid transactions are
+      finalized, with the capability to penalize malicious actors, thereby
+      maintaining the integrity of the rollup.  
     name: Arbiturm - Optimistic Rollup
     stepItems: []
     uuid: 9e3b90a5-66a9-406e-baa7-b24726e5ab83
