--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-11-08T11:58:24.832Z'
+created: '2023-11-08T12:07:23.314Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
@@ -276,7 +276,7 @@ steps:
       it simplifies the developer experience for deploying dApps. 
 
 
-      ### Stylus
+      ## Stylus
 
       Stylus is an innovative platform that extends smart contract development
       on the Ethereum blockchain to languages like Rust, C, and C++,
@@ -296,10 +296,33 @@ steps:
       ecosystem through its EVM+ integration.
 
 
-      ### Ecosystem Support
+      ## Ecosystem Support
+
+      Arbitrum offers a robust support ecosystem for its users, emphasizing
+      accessibility and community engagement. The cornerstone of this support is
+      detailed documentation and academy site that provides a wealth of
+      information on platform functionalities and integration processes. For
+      interactive assistance and community-driven support, Arbitrum hosts
+      channels like Discord, where users can seek advice, troubleshoot in
+      real-time, and engage with both peers and the Arbitrum team. Additionally,
+      a bug bounty program encourages the community to contribute to the
+      platform's security, rewarding those who identify and report
+      vulnerabilities. Users are also empowered through the Arbitrum DAO to
+      participate in governance, offering a platform to propose and vote on
+      changes, ensuring that the community's voice is integral to the network's
+      evolution. For direct inquiries, a dedicated support team is likely
+      available to handle specific issues, providing personalized help.
 
 
-      ### Decentralize governance
+      Arbitrum's comprehensive support fosters community, loyalty, and platform
+      security, as users contribute to identifying issues via the bug bounty
+      program. Educational resources and tutorials empower users, while
+      governance participation ensures a democratic, community-aligned platform.
+      This support system is vital for user operations and the network's ongoing
+      enhancement and resilience.
+
+
+      ## Decentralize governance
 
       Arbitrum's decentralized governance is orchestrated through the Arbitrum
       DAO, which allows stakeholders to vote on key decisions affecting both the
