update guide Introduction to Arbitrum

--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-11-08T12:07:23.314Z'
+created: '2023-11-08T12:23:43.800Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
@@ -356,7 +356,7 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: f77544c4-4e06-4dc0-adfc-6562e656ef2e
-  - content: >-
+  - content: >+
       ### Step 1
 
 
@@ -402,10 +402,11 @@ steps:
       ### Step 4
 
 
+      - https://docs.arbitrum.io/stylus/stylus-gentle-introduction 
+
+
       - https://docs.arbitrum.foundation/state-of-progressive-decentralization
 
-
-      - https://docs.arbitrum.io/stylus/stylus-gentle-introduction 
     name: References
     stepItems: []
     uuid: 49ebf9d8-c9ae-482f-a3d0-b5538f2d2ca8
