update guide Arbitrum Nitro

--- a/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
+++ b/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
@@ -1,12 +1,35 @@
 categories: []
 content: A deeper look into Arbitrum Nitro
-created: '2023-11-08T12:26:31.198Z'
+created: '2023-11-08T13:07:30.867Z'
 guideType: onboarding
 key: arbitrum-nitro-arbitrum-university-560
 name: 'Arbitrum Nitro '
 publishStatus: Live
 steps:
   - content: >-
+      ## Intro to Arbitrum Nitro
+
+      ### What is Arbiturm Nitro
+
+      ### Innovative features in Nitro
+
+
+      ## Nitro vs Classic
+
+
+      ## Nitro Deisgn
+
+
+
+      ### Features that set Atbitum L2 ahead of other EVM L2's
+
+
+
+      ## Arbitrum Nitro Design
+
+
+
+
       ## Arbitrum Nitro
 
 
